<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_connections"
                android:icon="@drawable/ic_person"
                android:title="@string/connections"/>
        <item
                android:id="@+id/nav_groups"
                android:icon="@drawable/ic_people"
                android:title="@string/groups"/>
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_message"
                android:title="@string/messages"/>
    </group>

    <item android:title="@string/app">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_tips"
                        android:icon="@drawable/ic_info"
                        android:title="@string/tips"/>
                <item
                        android:id="@+id/nav_sign_out"
                        android:icon="@drawable/ic_exit_to_app"
                        android:title="@string/sign_out"/>
            </group>
        </menu>
    </item>

</menu>
