<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/start_screen_background_image"
            android:id="@+id/imageView3"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

    <LinearLayout
            android:id="@+id/llLogin"
            android:orientation="horizontal"
            android:layout_width="181dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView3" app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintVertical_bias="0.371">

        <TextView
                android:text="@string/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:textSize="22sp"
                android:textColor="#40C4FF"
                tools:layout_editor_absoluteX="40dp" tools:layout_editor_absoluteY="304dp"/>
        <TextView
                android:text="@string/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="304dp"
                android:id="@+id/textView5" android:textSize="22sp"
                android:textColor="#69F0AE"
                tools:layout_editor_absoluteX="223dp"/>

    </LinearLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:background="@drawable/animated_button_shape"
            android:textSize="16sp"
            android:textColor="#5BDBB6"
            android:text="@string/sign_in"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="true"
            android:padding="10dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:visibility="visible"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:initialCornerAngle="50dp"/>

    <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout_editor_absoluteY="172dp"
            tools:layout_editor_absoluteX="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
